Adds aws plugin. (#11)
