# models/models_a_w_s_principal_roles.go
@@ -1,62 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/validate"
-)
-
-// ModelsAWSPrincipalRoles models a w s principal roles
-//
-// swagger:model models.AWSPrincipalRoles
-type ModelsAWSPrincipalRoles map[string]ModelsAWSPrincipalRole
-
-// Validate validates this models a w s principal roles
-func (m ModelsAWSPrincipalRoles) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	for k := range m {
-
-		if err := validate.Required(k, "body", m[k]); err != nil {
-			return err
-		}
-		if val, ok := m[k]; ok {
-			if err := val.Validate(formats); err != nil {
-				return err
-			}
-		}
-
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-// ContextValidate validate this models a w s principal roles based on the context it is used
-func (m ModelsAWSPrincipalRoles) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	var res []error
-
-	for k := range m {
-
-		if val, ok := m[k]; ok {
-			if err := val.ContextValidate(ctx, formats); err != nil {
-				return err
-			}
-		}
-
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
